--- a/Dockerfile.debian
+++ b/Dockerfile.debian
@@ -12,6 +12,8 @@ RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 2930ADAE8CAF505
         mongodb-org \
         redis-server \
         netcat-openbsd \
+        libffi-dev \
+        supervisor \
         openssh-server && \
     rm -rf /var/lib/apt/lists/* && \
     mv /aria2c /usr/local/bin && \
